--- a/block-BJaake/code/style.css
+++ b/block-BJaake/code/style.css
@@ -168,9 +168,12 @@ body {
 h2 {
   color: tomato;
   margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 600;
 }
 p {
   margin-bottom: 20px;
+  font-size: 20px;
 }
 .select-container {
   text-align: center;
@@ -181,4 +184,9 @@ p {
   font-size: 1.1rem;
   width: 300px;
   border-radius: 5px;
+}
+
+button a {
+  color: white;
+  background-color: rgb(72, 72, 121);
 }
